# namegen

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
namegen/: __init__.py  api.py  orchestrator.py  profile.py
namegen/cli/: __init__.py  main.py
namegen/data/: __init__.py  corpora.yaml  loaders.py
namegen/data/corpora/: en_given_f.txt  en_given_m.txt  en_surname.txt  sv_given_f.txt  sv_given_m.txt  sv_surname.txt
namegen/data/rules/: en.yaml  sv.yaml
namegen/models/: __init__.py  markov.py
namegen/sampling/: __init__.py  frequency.py
namegen/validators/: __init__.py  novelty.py  orthographic.py  phonotactic.py  scorer.py
plans/: namegen-research-grade-realistic-name-generator.md
tests/golden/: test_golden.py
tests/unit/: test_cli.py  test_generator.py  test_loaders.py  test_markov.py  test_profile.py  test_validators.py
